# spuclib

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md
spuc/: a_d.cpp  agc.cpp  agc.h  allpass.h  allpass_1.h  allpass_2nd.h  array.h  array1d.h  array2d.h  auto_corr.h  base_demod.h  base_type.h  baud_eq_env.h  bit_scrambler.h  bpe.h  bpsk_ber_test.cpp  bpsk_dd_phase.h  bpsk_quadricorrelator.h  builtin.h  burg.h  butterworth_allpass.cpp  butterworth_allpass.h  butterworth_fir.cpp  butterworth_fir.h  butterworth_iir.cpp  butterworth_iir.h  cascaded_cic.h  cfft.cpp  cfft.h  chebyshev_iir.cpp  chebyshev_iir.h  cic.h  circ_buffer.h  complex_class.h  complex_functions.h  complex_io.h  complex_operators.h  conj.h  conjr.h  convolutional_interleaver.h  (+155 more)
